# FakeCAD

./: .gitignore  CMakeLists.txt  README.md
docs/: DESIGN.md  REQUIREMENTS.md  ROADMAP.md
scripts/: clean.ps1  package.ps1
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: Serialization.cpp  Serialization.h  Shape.cpp  Shape.h
src/core/shapes/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  LineSegment.cpp  LineSegment.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
src/ui/: CanvasView.cpp  CanvasView.h  ControlPointItem.cpp  ControlPointItem.h  DrawingScene.cpp  DrawingScene.h  PropertyPanel.cpp  PropertyPanel.h  ShapeItem.cpp  ShapeItem.h
src/undo/: Commands.cpp  Commands.h
tests/: CMakeLists.txt
tests/common/: minitest.h
tests/e2e/: test_drawing_flow.cpp
tests/integration/: test_applyjson.cpp  test_serialization.cpp
tests/ui/: test_canvasview.cpp  test_drawing_scene_more.cpp  test_handles.cpp  test_undo.cpp
tests/unit/: test_shapes.cpp
